--- a/packages/tdb-documents-ui/src/css/terminusdb__styles.css
+++ b/packages/tdb-documents-ui/src/css/terminusdb__styles.css
@@ -4,10 +4,12 @@
 	--input-color: #adb5bd;
   --input-border: 1px solid rgb(102, 102, 102);
   --required-color: #6c757d;
-  --tdb-label-width: 10rem;
+  --tdb-label-width: 15rem;
   --tdb-latlng-label-width: 5rem;
   --input-calander-color: #000;
   --rounded: 0.375rem;
+  --field-margin-bottom: 1rem;
+  --array-margin-bottom: 2rem;
   /** diff colors */
   --danger-color: #842029;
   --danger-bg: #f8d7da;
@@ -31,7 +33,6 @@
   line-height: 1;
   background-clip: padding-box;
 }
-
 
 /** all property labels */
 label.control-label {
@@ -146,4 +147,19 @@ label.latlng-control-label {
 /** for documents with fields inside - like subdocuments/ choice subdocuments */
 .tdb__diff__changed-border { 
   border: 1px solid var(--success-border-color);
+}
+
+
+/** margin bottom for fields */
+.tdb__doc__input,
+.tdb__subdocument__input,
+.react-datetime-picker,
+.tdb__enum__input,
+.tdb__array__input {
+  margin-bottom: var(--field-margin-bottom);
+}
+
+/** margin bottom for array templates */
+.tdb__array__holder {
+  margin-bottom: var(--array-margin-bottom);
 }
