--- a/packages/tdb-documents-ui/src/css/terminusdb__styles.css
+++ b/packages/tdb-documents-ui/src/css/terminusdb__styles.css
@@ -188,16 +188,16 @@ label.latlng-control-label {
 
 /* mark down react diff */
 div.tdb__markdown_diff__original  > table.css-1ri4lr5-diff-container > tbody > tr.css-1n7ec1i-line td:nth-last-child(-n+3)  {
-  visibility: hidden;
-  width: 0;
-}
+  display: none;
 
-div.tdb__markdown_diff__original  > table.css-1ri4lr5-diff-container > tbody > tr.css-1n7ec1i-line  td.css-5g988g-gutter {
-  width: 0;
 }
 
 div.tdb__markdown_diff__changed  > table.css-1ri4lr5-diff-container > tbody > tr.css-1n7ec1i-line td:nth-last-child(n+3)  {
-  visibility: hidden;
-  width: 0;
+  display: none;
+}
+
+/* jsson editor border radius */
+#root_jsonProp_1__1-container {
+  border-radius: 4px;
 }
 
