--- a/packages/tdb-documents-ui/src/css/terminusdb__styles.css
+++ b/packages/tdb-documents-ui/src/css/terminusdb__styles.css
@@ -2,9 +2,11 @@
 @import "//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css";
 
 :root {
-	--input-color: #adb5bd;
+	/*--input-color: #adb5bd;*/
+  --input-color: #fff;
   --input-border: 1px solid rgb(102, 102, 102);
   --required-color: #6c757d;
+  --label-color: #f9d891;
   --tdb-label-width: 11rem;
   --tdb-latlng-label-width: 5rem;
   --input-calander-color: #000;
@@ -41,6 +43,7 @@
 /** all property labels */
 label.control-label {
   text-align:left; 
+  color: var(--label-color);
   word-wrap: break-word !important;
   word-break: break-word !important;
   word-break: break-all;
@@ -76,6 +79,7 @@ label.latlng-control-label {
 .tdb__label__width {
   max-width: var(--tdb-label-width);
   width: var(--tdb-label-width);
+  padding-right: 20px;
 }
 
 /** tdb add array button */
@@ -98,6 +102,10 @@ label.latlng-control-label {
 
 .react-datetime-picker__inputGroup__input:invalid { 
   background: transparent;
+}
+
+.react-datetime-picker__inputGroup__input {
+  color: var(--input-color) !important;
 }
 
 /** react calander set color to dark on select or hover */
@@ -135,7 +143,7 @@ label.latlng-control-label {
 .tdb__diff__original {
   color: var(--danger-color);
   background-color: var(--danger-bg);
-  border: var(--danger-border-color);
+  border: 1px solid var(--danger-border-color);
 } 
 
 .tdb__diff__original__deleted {
@@ -144,7 +152,8 @@ label.latlng-control-label {
 }
 
 /** for documents with fields inside - like subdocuments/ choice subdocuments */
-.tdb__diff__original-border { 
+.tdb__diff__original-border,
+.tdb__diff__deleted { 
   border: 1px solid var(--danger-border-color);
 }
 
@@ -161,11 +170,12 @@ label.latlng-control-label {
 .tdb__diff__changed {
   color: var(--success-color);
   background-color: var(--success-bg);
-  border: var(--success-border-color);
+  border: 1px solid var(--success-border-color);
 } 
 
 /** for documents with fields inside - like subdocuments/ choice subdocuments */
-.tdb__diff__changed-border { 
+.tdb__diff__changed-border,
+.tdb__diff__inserted { 
   border: 1px solid var(--success-border-color);
 }
 
