makigng css for react calander important to appear in dark mode

--- a/packages/tdb-documents-ui/src/css/terminusdb__styles.css
+++ b/packages/tdb-documents-ui/src/css/terminusdb__styles.css
@@ -90,7 +90,7 @@ label.latlng-control-label {
 
 /** react calander */
 .react-calendar {
-  background-color: var(--input-calander-color);
+  background-color: var(--input-calander-color) !important;
 }
 
 .react-datetime-picker { 
