fix query-builder, scroll in schema builder, error display, change the document hook name

--- a/packages/tdb-react-components/src/css/less/component/detailspanel.less
+++ b/packages/tdb-react-components/src/css/less/component/detailspanel.less
@@ -67,7 +67,11 @@
   &__box{
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    padding-bottom: 20px;
+
+    &--edit{
+      padding: 20px;
+    }
 
     &--hideEmpty{
 
@@ -186,6 +190,7 @@
 .tdb__list{
     display:flex;
     flex-direction:column;
+    padding-bottom: 20px;
 
     &__title{
       padding: 10px;
