--- a/packages/tdb-documents-ui/src/css/terminusdb__light.css
+++ b/packages/tdb-documents-ui/src/css/terminusdb__light.css
@@ -7,12 +7,19 @@
   --input-border: 1px solid #000;
   --required-color: #6c757d;
   --tdb-label-width: 13rem; 
+  --label-color: var(--input-color);
+  --tdb-light: #f8f9fa;
   --nested-control-label-color: #f8f8f8;
   --nested-required-label-color: #ccc;
   --tdb-latlng-label-width: 5rem; 
   --rounded: 0.375rem;
   --field-margin-bottom: 1rem;
   --array-margin-bottom: 2rem;
+}
+
+.tdb__frame__viewer {
+  background-color: var(--tdb-light)!important;
+  padding: 1rem;
 }
 
 /** tdb input */
