--- a/packages/tdb-dashboard/src/App.css
+++ b/packages/tdb-dashboard/src/App.css
@@ -1341,3 +1341,149 @@ button.graphiql-tab-add>svg
   --bs-accordion-bg: #303030 !important;
 }
 
+
+
+.rule--header >button,
+.group--actions  >button{
+  white-space: nowrap;
+    margin-right: 5px;
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #375a7f;
+    --bs-btn-border-color: #375a7f;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #2f4d6c;
+    --bs-btn-hover-border-color: #2c4866;
+    --bs-btn-focus-shadow-rgb: 85, 115, 146;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #2c4866;
+    --bs-btn-active-border-color: #29445f;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #375a7f;
+    --bs-btn-disabled-border-color: #375a7f;
+    --bs-btn-padding-x: 0.75rem;
+    --bs-btn-padding-y: 0.375rem;
+    --bs-btn-font-family: ;
+    --bs-btn-font-size: 1rem;
+    --bs-btn-font-weight: 400;
+    --bs-btn-line-height: 1.5;
+    --bs-btn-border-width: 1px;
+    --bs-btn-border-radius: 0.375rem;
+    --bs-btn-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
+    --bs-btn-disabled-opacity: 0.65;
+    --bs-btn-focus-box-shadow: 0 0 0 0.25rem rgba(var(--bs-btn-focus-shadow-rgb), .5);
+    display: inline-block;
+    padding: var(--bs-btn-padding-y) var(--bs-btn-padding-x);
+    font-family: var(--bs-btn-font-family);
+    font-size: var(--bs-btn-font-size);
+    font-weight: var(--bs-btn-font-weight);
+    line-height: var(--bs-btn-line-height);
+    color: var(--bs-btn-color);
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    border: var(--bs-btn-border-width) solid var(--bs-btn-border-color);
+    border-radius: var(--bs-btn-border-radius);
+    background-color: var(--bs-btn-bg);
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.group--actions  >button:before{
+  content: "+";
+  padding-right: 4px;
+}
+
+.rule--header >button:last-of-type{
+  background-color: #e74c3c;
+}
+
+.group--actions  >button:nth-of-type(3n):before{
+  content: "";
+  padding-right: 0px;
+}
+
+.group--actions >button:nth-of-type(3n){
+  background-color: #e74c3c;
+}
+
+.group--conjunctions >input + label  {
+    cursor: pointer;
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #444;
+    --bs-btn-border-color: #444;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #3a3a3a;
+    --bs-btn-hover-border-color: #363636;
+    --bs-btn-focus-shadow-rgb: 96, 96, 96;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #363636;
+    --bs-btn-active-border-color: #333333;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #444;
+    --bs-btn-disabled-border-color: #444;
+    padding: 0.25rem 0.5rem;
+    font-size: .875rem;
+    line-height: 1.5;
+    display: inline-block;
+    font-family: var(--bs-btn-font-family);
+    font-size: var(--bs-btn-font-size);
+    font-weight: var(--bs-btn-font-weight);
+    line-height: var(--bs-btn-line-height);
+    color: var(--bs-btn-color);
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    background-color: var(--bs-btn-bg);
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+
+}
+
+.group--conjunctions> input[type='checkbox']:checked + label {
+  background: #e74c3c;
+}
+
+.group--conjunctions> input[type='radio']:checked + label {
+  background: #375a7f;
+}
+
+.group--conjunctions> input:checked{
+  display: none;
+}
+
+.group--conjunctions> input{
+  display: none;
+}
+.group--field> select,
+.widget--widget >select,
+.rule--operator > select,
+.rule--field > select {
+  font-size: .875rem;
+  line-height: 1.5;
+  font-family: var(--bs-btn-font-family);
+  font-weight: var(--bs-btn-font-weight);
+  line-height: var(--bs-btn-line-height);
+  text-align: center;
+  min-width: 200px;
+  line-height: 1.5!important;
+  min-height: 40px!important;
+  color: #000;
+  background-color: #acb5bd;
+  border-radius: 5px;
+}
+.qb-drag-handler .group--drag-handler{
+  display:none
+}
+
+.widget--widget >input{
+  padding: 10px;
+  color: white !important;
+}
