fix error reporting

--- a/packages/tdb-dashboard/src/App.css
+++ b/packages/tdb-dashboard/src/App.css
@@ -1487,3 +1487,18 @@ button.graphiql-tab-add>svg
   padding: 10px;
   color: white !important;
 }
+
+.pre--error {
+  padding: 10px;
+  box-sizing:border-box;
+  -moz-box-sizing:border-box;
+  webkit-box-sizing:border-box;
+  display:block; 
+  white-space: pre-wrap;  
+  white-space: -moz-pre-wrap; 
+  white-space: -pre-wrap; 
+  white-space: -o-pre-wrap; 
+  word-wrap: break-word; 
+  width:100%; 
+  overflow-x:auto;
+ }
