review table style

--- a/packages/tdb-react-table/src/style.css
+++ b/packages/tdb-react-table/src/style.css
@@ -1,10 +1,10 @@
 
-/*.table td{
+.table td{
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     max-width: 200px;
-}*/
+}
 
 .rule--header >button,
 .group--actions  >button{
