--- a/packages/tdb-dashboard/src/App.css
+++ b/packages/tdb-dashboard/src/App.css
@@ -64,6 +64,7 @@ img.user-avatar {
   -moz-background-clip: padding;
   -webkit-background-clip: padding;
   background-clip: padding-box;
+  transition-timing-function: ease;
 }
 
 .Resizer:hover {
