--- a/packages/tdb-dashboard/src/App.css
+++ b/packages/tdb-dashboard/src/App.css
@@ -1,5 +1,6 @@
 /** review this link after build of tdb-dcoumnets-ui*/
 @import "../../tdb-documents-ui/src/css/terminusdb__styles";
+/*@import url("https://unpkg.com/react-sidebar-ui@1.2.0/dist/index.css");*/
 
 html, body {
   height: 100% ;
@@ -52,6 +53,23 @@ img.cowduck__border {
 img.user-avatar {
   height: 50px;
 }
+
+/** -------- Side bar ---------------- */
+
+.hide__sideNav {
+  transition: left 0.3s ease-in-out;
+  left: -25vw;
+  position: fixed;
+}
+
+
+
+.expanded__main__content {
+  left: 4rem;
+  position: fixed;
+  transition: left 0.3s ease-in-out;
+}
+
 
 /* ---------- Split Pane resizing css ---------- */
 .Resizer {
