--- a/packages/tdb-dashboard/src/App.css
+++ b/packages/tdb-dashboard/src/App.css
@@ -110,8 +110,8 @@ img.user-avatar {
 .Resizer.vertical {
   width: 5px !important;
   margin: 0 -5px;
-  border-left: 1px solid rgba(255, 255, 255, 0) !important;
-  border-right: 1px solid rgba(255, 255, 255, 0) !important;
+  /*border-left: 1px solid rgba(255, 255, 255, 0) !important;
+  border-right: 1px solid rgba(255, 255, 255, 0) !important;*/
   cursor: col-resize;
   background: inherit;
 }
@@ -138,8 +138,8 @@ div.SplitPane  .horizontal {
 }
 
 .Resizer.vertical {
-  border-left: 0 !important;
-  border-right: 0 !important;
+  /*border-left: 0 !important;
+  border-right: 0 !important;*/
 }
 /* ---------- Split Pane resizing css ---------- */
 
