--- a/packages/tdb-react-components/src/css/less/component/splitPane.less
+++ b/packages/tdb-react-components/src/css/less/component/splitPane.less
@@ -32,7 +32,7 @@
 .Resizer.vertical {
   width: 11px;
   margin: 0 -5px;
-  border-left: 5px solid rgba(255, 255, 255, 0);
+  border-left: 2px solid rgba(99, 99, 99, 100) !important;
   border-right: 5px solid rgba(255, 255, 255, 0);
   cursor: col-resize;
 }
