--- a/packages/tdb-react-components/src/css/less/component/detailspanel.less
+++ b/packages/tdb-react-components/src/css/less/component/detailspanel.less
@@ -1,8 +1,8 @@
 .tdb__panel{
     outline: 0;
-    overflow-y: auto !important;
+    /* overflow-y: auto !important;
     overflow-x: hidden;
-    /* padding: 0 1% 0 0; */
+    padding: 0 1% 0 0; */
     padding: 0px;
     margin: 0;
     word-wrap: break-word;
