--- a/packages/tdb-react-components/src/css/less/component/detailspanel.less
+++ b/packages/tdb-react-components/src/css/less/component/detailspanel.less
@@ -59,9 +59,9 @@
 
   &__bar{
     background: transparent;
-    justify-content: flex-end;
+    /*justify-content: flex-end;*/
     display: flex;
-    border-bottom: 1px solid rgb(102, 102, 102);;
+    /*border-bottom: 1px solid rgb(102, 102, 102);;*/
   }
 
   &__box{
