--- a/packages/tdb-react-components/src/css/less/component/detailspanel.less
+++ b/packages/tdb-react-components/src/css/less/component/detailspanel.less
@@ -227,7 +227,7 @@
     &__item{
       display: flex;
       align-items: baseline;
-      border-bottom: 1px solid #dddd;
+      /*border-bottom: 1px solid #dddd;*/
       padding-left: 10px;
     }
 }
