--- a/packages/tdb-dashboard/src/App.css
+++ b/packages/tdb-dashboard/src/App.css
@@ -1223,7 +1223,7 @@ button.graphiql-tab-add>svg
 .qb-lite .group--header:not(:hover) .group--actions,
 .qb-lite .rule_group:not(:hover) .group--drag-handler,
 .qb-lite .rule_group:not(:hover) .group--actions {
-  opacity: 1;
+  opacity: 1;https://github.com/terminusdb/terminusdb-dashboard/blob/main/packages/tdb-dashboard/src/App.css
 }
 
 .accordion{
@@ -1425,4 +1425,17 @@ button.graphiql-tab-add>svg
   100% {
     transform: rotate(720deg);
   }
+}
+
+.graphiql-query-editor{
+  width: 100%;
+  height: 100%;
+}
+.graphiql-editor{
+  width: 100%;
+  height: 100%;
+}
+.graphiql-query-editor-wrapper{
+  width: 100%;
+  height: 100%;
 }
