--- a/packages/tdb-react-components/src/css/less/component/accordion.less
+++ b/packages/tdb-react-components/src/css/less/component/accordion.less
@@ -64,9 +64,9 @@
 	    }
 
 	    &:hover{
-	    	 background-color: rgb(157, 157, 157);
-			 	color:#000;
-				 border-radius: 6px;
+	    	background-color: rgb(57, 57, 57);
+			 	color:#fff;
+				border-radius: 6px;
 	    }
 
 	     &--green{
