--- a/packages/tdb-react-components/src/css/less/terminusdb__style.less
+++ b/packages/tdb-react-components/src/css/less/terminusdb__style.less
@@ -28,3 +28,10 @@
 @import "component/report.less";
 @import "component/dblist.less";
 @import "component/toolBar.less";
+
+.diagram-component {
+  width: 100%;
+  height: 100vh;
+  border: solid 1px black;
+  background-color: #2a2a2a;;
+}
