--- a/packages/tdb-react-components/src/css/less/component/detailspanel.less
+++ b/packages/tdb-react-components/src/css/less/component/detailspanel.less
@@ -9,8 +9,8 @@
     flex: 1;
     flex: 1 1 auto;
     min-height: 100px;
-    margin-bottom: 100px;
-    /* height: calc(100vh - 330px); */
+    /* margin-bottom: 100px;
+    height: calc(100vh - 330px); */
 
   &--nopad{
     padding:0px;
@@ -218,7 +218,8 @@
 
     &__items{
       margin-bottom:10px;
-      border: 1px solid #868484;
+      border: 1px solid #4d4d4d;
+      border-radius: 4px;
       padding: 10px;
       margin-bottom: 20px;
       text-align: center;
