--- a/packages/tdb-react-components/src/css/less/component/relationship.less
+++ b/packages/tdb-react-components/src/css/less/component/relationship.less
@@ -2,9 +2,10 @@
 	
 	&__box{
 	  display: flex;	  
-	  padding: 10px;
 	  align-items: center;
-	  margin-bottom: 10px;
+	  /*margin-bottom: 10px;
+		padding: 10px;*/
+		margin: 10px 0 10px 0;
 	}
 	
     &__linegroup{
@@ -19,32 +20,41 @@
       overflow: hidden;
       text-overflow: ellipsis;
       max-width:100px;
-	  margin-bottom: 0px;
+	  	margin-bottom: 0px;
+			font-size: small;
     }
 
 
     &__line{
     	flex-grow: 1;
-    	height: 30px;
-    	border-bottom: 5px solid #868484;
+    	height: 25px;
+    	/*border-bottom: 5px solid #868484;
+			height: 30px;*/
+			border-bottom: 1px solid #eee;
     	display: flex;
     	justify-content: center;
     }
 
     &__arrow{
-    	font-size: 30px;
-	    height: 30px;
+    	font-size: 20px;
 	    margin-top: 12px;
-	    color: #868484;
+	    /*color: #868484;
+			font-size: 30px;
+			 height: 30px;*/
+			color: #eee
     }
 
     &__element{
-	    width: 110px;
-	    height: 100px;
+	    /*width: 110px;
+	    height: 100px;*/
 	    padding: 5px;
-	    border: 3px dashed;
-	    border-radius: 20px;
-	    color: #265fa2;
+	    /*border: 3px dashed;*/
+			border: 3px solid #ff0072;
+			background: aliceblue;
+	    border-radius: 4px;
+	    /*color: #265fa2;
+			border-radius: 20px;*/
+			color:#333;
 	    font-weight: bold;
 	    display: -ms-flexbox;
 	    display: flex;
@@ -55,8 +65,8 @@
 
 	    &--active{
 	    	cursor:pointer;
-	    	background: aliceblue;
-
+	    	/*background: aliceblue;*/
+				border: 0;
 	    	&:hover{
 	    		background-color: #d1d5da;
 	    	}
@@ -65,6 +75,9 @@
 
 }
 
+.react-flow__attribution {
+	display: none !important;
+}
 
 
 
