Fix border CSS issue
It got overridden by other CSS styles

--- a/packages/tdb-react-components/src/css/less/component/tabs.less
+++ b/packages/tdb-react-components/src/css/less/component/tabs.less
@@ -14,11 +14,8 @@
     display: flex;
     flex-wrap: wrap;
     background: #f4f4f4;
-    /*border-bottom: 1px solid #ddd;
-    border-top: 1px solid #ddd;*/
     border-bottom: 1px solid #666666;
     min-height:45px;
-    
 }
 
 .RRT__tab {
@@ -36,12 +33,11 @@
 .RRT__tab--selected {
     background: #f4f4f4;
     border-color: #f4f4f4 #f4f4f4 #ff8000;
-    /*color: #ff8000;*/
     color: #fed893;
     font-weight: 600;
 }
 
-.RRT__panel {
+.RRT__panel.tdb__panel {
     margin-top: -1px;
     padding: 1em;
     border: 0px;
